--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Shark-Bot", 
-  "description": "Super Bot WhatsApp",
-  "repository": "https://github.com/ElChema-Nc/Shark-Bot",
+  "name": "SharkBot", 
+  "description": "El Mejor Bot Para Whatsapp 2023/2024",
+  "repository": "https://github.com/ElChema-Nc/SharBot",
   "logo": "https://i.ibb.co/JRB2H3s/Menu1.jpg",
   "keywords": ["java", "bot", "whatsapp-bot", "whatsapp-automation"],
   "buildpacks": [
