--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { 
 "name": "SharkBot",
-"version": "7.5.3", 
+"version": "7.9.3", 
 "description": "El Mejor Bot De WhatsApp 2023/2024",
 "main": "index.js",
 "type": "module",
@@ -27,7 +27,7 @@
 "url": "https://github.com/ElChema-Nc/SharkBot/issues" },
 "license": "GPL-3.0-or-later",
 "dependencies": {
-"@whiskeysockets/baileys": "npm:@whiskeysockets/baileys",
+"@whiskeysockets/baileys": "^6.4.1",
 "@adiwajshing/keyed-db": "^0.2.4",
 "@bochilteam/scraper": "^4.2.4",
 "@brandond/findthelyrics": "^2.0.5",
